--- a/src/app/main-layout/forgetpassword/forgetpassword.component.html
+++ b/src/app/main-layout/forgetpassword/forgetpassword.component.html
@@ -17,7 +17,7 @@
     <div class="modal-dialog modal-notify modal-danger" role="document">
         <div class="modal-content form-elegant"> -->
             <div class="modal-header text-center">
-                <h5 class="modal-title white-text w-100 font-weight-bold" id="myModalLabel">Sign In to continue</h5>
+                <h5 class="modal-title white-text w-100 font-weight-bold" id="myModalLabel">Forget Password</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                 (click)="closeLoginModal()">
                     <span aria-hidden="true">×</span>
@@ -62,23 +62,14 @@
                 </div>
         
 
-                <p class="font-small red-text d-flex justify-content-end" (click)="openForgetModal()">Forgot
-                  <a href="#" class="red-text ml-1"> Password?</a>
-                </p>
                 <div class="text-center">
                   <button type="button" mdbBtn gradient="red" block="true" rounded="true" type="submit" class="z-depth-1a waves-light"
-                          mdbWavesEffect>Sign in
+                          mdbWavesEffect>Change password
                   </button>
                 </div>
               </form>
               </div>
 
-              <p class="dark-grey-text text-right d-flex justify-content-center mb-3 pt-2">or<a href="#" class="blue-text ml-1">Continue as Guest </a></p>
-              <div class="modal-footer mx-5 pt-3 mb-1">
-                <p class="font-small grey-text d-flex justify-content-end">Not Signed Up?
-                  <a data-dismiss="modal" class="red-text ml-1" data-toggle="modal" data-target="#basicExample" (click)="openRegisterModal()" mdbWavesEffect>Sign Up Here</a>
-                </p>
-              </div>
             <!-- <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm waves-light" data-dismiss="modal"
                     (click)="centralRegular.hide()" mdbWavesEffect>Close</button>
