--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -65,16 +65,26 @@
                                 </div>
                                 <div class="bottom-div">
                                 </div>
-                                <div class="bottom-div">
+                                <div class="bottom-div" *ngIf=" restro.resto_offer != 'NA'">
                                     <div _ngcontent-serverapp-c21="" aria-hidden="false" class="store_rating ng-tns-c21-2 ng-star-inserted">
                                     </div>
                                     <div class="card_address d-flex-center">
                                         <span class="dot ng-tns-c21-2 ng-star-inserted"
                                             style="margin: 0px 8px 0px 0px;"></span>
-                                        <p  class="ng-tns-c21-2 ng-star-inserted">
-                                                {{restro.resto_offer}}
+                                        <p  class="ng-tns-c21-2 ng-star-inserted" >
+                                            {{restro.resto_offer}}
                                         </p>
                                     </div>
+                                </div>
+                                <div class="bottom-div">
+                                    <p  class="ng-tns-c21-2 ng-star-inserted" >
+                                        <small class="text-muted"> Open :-{{restro.open_time}}  Close :-{{restro.close_time}} </small>
+                                     </p>
+                                </div>
+                                <div class="bottom-div">
+                                    <p  class="ng-tns-c21-2 ng-star-inserted rating" >
+                                        <mdb-icon fas icon="star"  *ngFor="let item of createRange(restro.rating);" class="pr-2 yellow-text" size="lg"></mdb-icon>
+                                    </p>
                                 </div>
                             </div>
                         </div>  
