--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.html
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.html
@@ -63,7 +63,7 @@
         </div>
         <div class="col-lg-8 col-12 col-md-8 pr-lg-0">
             <div class="view view-cascade overlay wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
-                <img src="assets/img/shad1300x32601.jpg" class="img-fluid">
+                <img [src]="restaurantObj.restaurant_banner" class="img-fluid">
                 <a href="#!">
                     <div class="mask rgba-white-slight waves-effect waves-light"></div>
                 </a>
