--- a/src/app/main-layout/footer/footer.component.html
+++ b/src/app/main-layout/footer/footer.component.html
@@ -74,7 +74,7 @@
               <a href="#!">About Us</a>
             </li>
             <li>
-              <a href="#!">Terms & Conditions</a>
+              <a routerLink="/termscondition">Terms & Conditions</a>
             </li>
             <li>
               <a href="#!">Privacy Policy</a>
