--- a/src/app/main-layout/navigation/navigation.component.html
+++ b/src/app/main-layout/navigation/navigation.component.html
@@ -35,7 +35,9 @@
     <mdb-navbar-brand>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                  <img style="width: 107px;" src="assets/img/bahoklogo/food-bahok-logo-final-01.png" class="img-fluid">
+                </a>
             </li>
         </ul>
     </mdb-navbar-brand>
