--- a/src/app/main-layout/login/login.component.scss
+++ b/src/app/main-layout/login/login.component.scss
@@ -90,7 +90,8 @@
   font-weight: 400; }
   
   .red-gradient {
-    background: linear-gradient(40deg,#e6b72b,#de382c) !important;
+    // background: linear-gradient(40deg,#e6b72b,#de382c) !important;
+    background: linear-gradient(40deg, #325146, #103542) !important;
   }
   .btn-rounded {
   border-radius: 10em;
