--- a/src/app/main-layout/navigation/navigation.component.html
+++ b/src/app/main-layout/navigation/navigation.component.html
@@ -29,7 +29,7 @@
 
     <!--Navbar-->
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark red fixed-top scrolling-navbar" mdbStickyHeader [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-light green fixed-top scrolling-navbar" mdbStickyHeader [containerInside]="false">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand>
