--- a/src/app/views/outlets-details/common/products/products.component.scss
+++ b/src/app/views/outlets-details/common/products/products.component.scss
@@ -15,8 +15,8 @@
     border-color: transparent;
 }
 .note:hover{
-    background-color: #fae7e8;
-    border-left: 6px solid #e45460;
+    background-color: #438b8845;
+    border-left: 6px solid #266984;
 }
 
 .single-news{
