--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.scss
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.scss
@@ -1,7 +1,7 @@
 .bg-banner{
     padding-bottom: 20px;
     background-color: rgb(224, 49, 75);
-    
+    background-color: #a1782c;
 }
 
 .outlet-banner-sticky{
