--- a/src/app/main-layout/footer/footer.component.html
+++ b/src/app/main-layout/footer/footer.component.html
@@ -21,7 +21,7 @@
 
           <!-- Content -->
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">CONTACT US</h5>
-          <p>info@santaeats.co.uk</p>
+          <p>info@foodbahok.com</p>
            <p>4 Old Park Lane, Mayfair, London W1K 1QW</p> 
         </div>
         <!-- Grid column -->
@@ -71,14 +71,24 @@
 
           <ul class="list-unstyled">
             <li>
-              <a href="#!">About Us</a>
+              <a href="https://foodbahok.com/pages/centre" target="_blank">Restaurant Sign Up</a>
             </li>
             <li>
-              <a routerLink="/termscondition">Terms & Conditions</a>
+              <a href="https://foodbahok.com/pages/career" target="_blank">Careers</a>
             </li>
             <li>
-              <a href="#!">Privacy Policy</a>
+              <a href="https://foodbahok.com/pages/about" target="_blank">About Us</a>
             </li>
+            <li>
+              <a href="https://foodbahok.com/pages/terms_and_condition" target="_blank">Terms & Conditions</a>
+            </li>
+            <li>
+              <a href="https://foodbahok.com/pages/privacy" target="_blank">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="https://foodbahok.com/pages/refunds" target="_blank">Refund Policy</a>
+            </li>
+      
             <li>
               <a href="#!">Terms of Use</a>
             </li>
@@ -143,7 +153,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2021 Copyright:
-      <a href="#"> santaeats.com</a>
+      <a href="www.foodbahok.com"> foodbahok.com</a>
     </div>
     <!-- Copyright -->
 
