--- a/src/app/views/checkout/common/address/addaddress/addaddress.component.scss
+++ b/src/app/views/checkout/common/address/addaddress/addaddress.component.scss
@@ -91,6 +91,7 @@
   
   .red-gradient {
     background: linear-gradient(40deg,#e6b72b,#de382c) !important;
+    background: linear-gradient(40deg, #325146, #103542) !important;
   }
   .btn-rounded {
   border-radius: 10em;
