--- a/src/app/views/outlets-details/common/menu/menu.component.scss
+++ b/src/app/views/outlets-details/common/menu/menu.component.scss
@@ -5,16 +5,17 @@
 ul{
     li{
         border: none !important;
-    }:first-child:not(h4){
-        border-bottom: 1px solid rgba(0, 0, 0, 0.125) !important;
     }
+    // :first-child:not(h4){
+    //     border-bottom: 1px solid rgba(0, 0, 0, 0.125) !important;
+    // }
     li:not(._menu):hover{
-        border-left: 3px solid #750000 !important;
-        cursor: pointer;
-        font-weight: 600;
-        transition: 0.5s;
-        background: #ed4134;
-        color: white;
+            border-left: 3px solid #113038 !important;
+            cursor: pointer;
+            font-weight: 600;
+            // transition: 0.5s;
+            background: #a0b8c2;
+            color: white;
             
     }
     li:focus{
@@ -25,10 +26,10 @@ ul{
 }
 }
 .active{
-    border-left: 3px solid #750000 !important;
+    border-left: 3px solid #113038 !important;
     cursor: pointer;
     font-weight: 600;
     transition: 0.5s;
-    background: #ed4134;
+    background: #266984 !important;
     color: white;
 }
