list view and map view change

--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -30,12 +30,13 @@
     <!-- Section heading -->
     <div class="clearfix">
         <span class="h6-responsive font-weight-bold text-center my-5 float-left">All</span>
-        <span class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  routerLink="/maps"><i style="color: red;margin-right: 7px;" class="fas fa-map-marker-alt"></i>Map View</span>
+        <span *ngIf="changeviewFlag == false" class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  (click)="changeview(true)"><i style="color: red;margin-right: 7px;" class="fas fa-map-marker-alt"></i>Map View</span>
+        <span *ngIf="changeviewFlag == true" class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  (click)="changeview(false)"><i style="color: red;margin-right: 7px;" class="fas fa-list-alt"></i>List View</span>
     </div>
     <!-- Grid row -->
     <div class="row">
   
-        <div class="container p-0 d-flex flex-wrap">
+        <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == false">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 card_parent row-col-eq ng-tns-c21-2 ng-star-inserted mb-4 mb-lg-0 pb-3"
                *ngFor="let restro of restorantList;" >
                 <div class="card card_hover" >
@@ -231,6 +232,9 @@
                     </div>
                 </div>
             </div> -->
+        </div>
+        <div class="container p-0 d-flex flex-wrap" *ngIf="changeviewFlag == true">
+            <app-map1></app-map1>
         </div>
     </div>
     </div>
