--- a/src/app/views/dashboards/common/categories/categories.component.scss
+++ b/src/app/views/dashboards/common/categories/categories.component.scss
@@ -23,6 +23,9 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
 .fa, .fas {
     font-weight: 900;
 }
+app-map1{
+    width: 100%;
+}
 .collection-card .stripe.dark {
     background-color: rgba(0,0,0,0.7);
 }
