--- a/src/app/views/checkout/common/address/address.component.html
+++ b/src/app/views/checkout/common/address/address.component.html
@@ -3,7 +3,7 @@
     <mdb-card-body>
       <a  mdbWavesEffect mdbBtn color="light" size="sm"  (click)="openAddAddressModal('Add')"><mdb-icon class="red-text mr-1" fas icon="eye"></mdb-icon>Add Address</a>
       <div class="row mt-3" *ngIf="addresses">
-          <div class="col-lg-6 col-sm-12"*ngFor="let address of addresses.address" >
+          <div class="col-lg-6 col-sm-12" *ngFor="let address of addresses.address;let addressind = index" >
             <mdb-card class="mb-3">
                 <mdb-card-body>
                     <div class="font-weight-bold d-flex dark-grey-text cart-plus-minus">
@@ -30,7 +30,9 @@
                         <p class="font-weight-bold mb-3">  <small class="text-muted">Mobile no:-{{address.mobileno}}</small></p>
                         <p class="font-weight-bold mb-3"> <small class="text-muted">Email id:-{{address.email}}</small></p>
                     </a>
-                    <a  mdbBtn color="blue" mdbWavesEffect size="sm" class="mt-3" (click)="setdeliveraddress(address)">Deliver Here</a>
+                    <input type="checkbox" class="checkboxInput" style="margin-right: 9px;" id="address{{addressind}}"  (click)="setdeliveraddress(address)">
+                    <label style="font-weight: 700 !important;font-family: Font Awesome 5 Free" for="vehicle1">Deliver Here</label><br>
+                    <!-- <a  mdbBtn color="blue" mdbWavesEffect size="sm" class="mt-3" (click)="setdeliveraddress(address)">Deliver Here</a> -->
                 </mdb-card-body>
               </mdb-card>
           </div>
