--- a/src/app/views/dashboards/common/categories/categories.component.scss
+++ b/src/app/views/dashboards/common/categories/categories.component.scss
@@ -12,6 +12,9 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
     color: inherit;
     text-decoration: none;
 }
+.ratingDiv{
+    height: 30px;
+}
 .collection-card .stripe.light a p {
     color: #424242;
 }
