--- a/src/app/views/outlets-details/common/products/products.component.html
+++ b/src/app/views/outlets-details/common/products/products.component.html
@@ -2,10 +2,10 @@
 <div class="card z-depth-1 border-0" style="min-height: 100px;" *ngIf="productsList">
 
 <!-- Small news -->
-<div class="single-news note"  *ngFor="let products of productsList;let cardIndex = index" >
+<div class="single-news "  *ngFor="let products of productsList;let cardIndex = index" >
 
     <!-- Grid row -->
-    <div class="row">
+    <div class="row" *ngIf="products.menu_categoryid == menuid">
 
       <!-- Grid column -->
       <div class="col-md-3 col-4 p-0-8"  *ngIf="products.menu_categoryid == menuid">
@@ -33,9 +33,9 @@
             <div class="col-lg-11 col-10 text-truncate pl-0 mb-2">
                 <p class="font-weight-bold dark-grey-text mb-1">{{products.menu_name}}</p>
             </div>
-            <a >
+            <!-- <a >
                 <span mdbWavesEffect class="badge red z-depth-1 text-white plus-minus"><mdb-icon fas icon="share-alt"></mdb-icon></span>
-            </a>
+            </a> -->
         </div>
        
         <a href="#!" class="red-text">
