--- a/src/app/views/outlets-details/common/products/products.component.scss
+++ b/src/app/views/outlets-details/common/products/products.component.scss
@@ -20,8 +20,11 @@
 }
 
 .single-news{
+    margin-bottom: 10px;
+    margin-left: 10PX;
     img{
         height: 100px;
+        width: 134px;
     object-fit: cover;
     }
 }
