--- a/src/app/main-layout/footer/footer.component.html
+++ b/src/app/main-layout/footer/footer.component.html
@@ -1,161 +1,167 @@
 <!-- Footer -->
 <footer class="page-footer font-small red pt-4 waw fadeIn">
 
-    <!-- Footer Links -->
-    <div class="container text-center text-md-left">
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
 
-      <!-- Grid row -->
-      <div class="row">
-        <div class="col-md-4 mx-auto">
+    <!-- Grid row -->
+    <div class="row">
+      <div class="col-md-4 mx-auto">
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">GET TO KNOW US</h5>
 
-            <!-- Content -->
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Footer Content</h5>
-            <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.</p>
-  
-          </div>
+        <ul class="list-unstyled">
+          <li>
+            <a href="https://foodbahok.com/pages/centre" target="_blank">Restaurant Sign Up</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/centre" target="_blank">Delivery with Food Bahok</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/career" target="_blank">Careers</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/about" target="_blank">About Us</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/privacy" target="_blank">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/terms_and_condition" target="_blank">Terms & Conditions</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/cookie" target="_blank">Cookie Policy</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/" target="_blank">Modern Slavery Statement</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com" target="_blank">Sustainability</a>
+          </li>
+          <li>
+            <a href="https://foodbahok.com/pages/refunds" target="_blank">Refund Policy</a>
+          </li>
+        </ul>
+      </div>
 
-        <hr class="clearfix w-100 d-md-none">
-        <!-- Grid column -->
-        <div class="col-md-4 mx-auto">
+      <hr class="clearfix w-100 d-md-none">
 
-          <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">CONTACT US</h5>
-          <p>info@foodbahok.com</p>
-           <p>4 Old Park Lane, Mayfair, London W1K 1QW</p> 
-        </div>
-        <!-- Grid column -->
+      <!-- Grid column -->
+      <div class="col-md-4 mx-auto">
 
-        <hr class="clearfix w-100 d-md-none">
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Let Us Help You</h5>
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-6 mx-auto">
-
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">CUISINE</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Chinese</a>
-            </li>
-            <li>
-              <a href="#!">Indian</a>
-            </li>
-            <li>
-              <a href="#!">Italian</a>
-            </li>
-            <li>
-              <a href="#!">Sushi</a>
-            </li>
-            <li>
-                <a href="#!">Pizza</a>
-              </li>
-              <li>
-                <a href="#!">Turkish</a>
-              </li>
-              <li>
-                <a href="#!">Lebanese</a>
-              </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
-
-        <hr class="clearfix w-100 d-none d-md-none">
-
-        <!-- Grid column -->
-        <div class="col-md-2 col-6 mx-auto">
-
-          <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">HELP & LEGAL</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <a href="https://foodbahok.com/pages/centre" target="_blank">Restaurant Sign Up</a>
-            </li>
-            <li>
-              <a href="https://foodbahok.com/pages/career" target="_blank">Careers</a>
-            </li>
-            <li>
-              <a href="https://foodbahok.com/pages/about" target="_blank">About Us</a>
-            </li>
-            <li>
-              <a href="https://foodbahok.com/pages/terms_and_condition" target="_blank">Terms & Conditions</a>
-            </li>
-            <li>
-              <a href="https://foodbahok.com/pages/privacy" target="_blank">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="https://foodbahok.com/pages/refunds" target="_blank">Refund Policy</a>
-            </li>
-      
-            <li>
-              <a href="#!">Terms of Use</a>
-            </li>
-            <li>
-                <a href="#!">Career</a>
-              </li>
-          </ul>
-
-        </div>
-        <!-- Grid column -->
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">COVID-19 and Food Bahok</a>
+          </li>
+          <li>
+            <a href="#!">Contact us</a>
+          </li>
+          <li>
+            <a href="#!">Delivery Rates & Policies</a>
+          </li>
+          <li>
+            <a href="#!">Recycling</a>
+          </li>
+          <li>
+            <a href="#!">Food Bahok Mobile App</a>
+          </li>
+          <li>
+            <a href="#!">Customer Service</a>
+          </li>
+          <li>
+            <a href="#!">My Account</a>
+          </li>
+          <li>
+            <a href="#!">Blog
+            </a>
+          </li>
+          <li>
+            <a href="#!">Buy Gift Card</a>
+          </li>
+          <li>
+            <a href="#!">Redeem Gift card</a>
+          </li>
+        </ul>
 
       </div>
-      <!-- Grid row -->
+      <!-- Grid column -->
+
+      <!-- <hr class="clearfix w-100 d-none d-md-none"> -->
+      <hr class="clearfix w-100 d-md-none">
+      <!-- Grid column -->
+      <div class="col-md-4 mx-auto">
+
+        <!-- Content -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">CONTACT US</h5>
+        <p>
+          <i class="fas fa-map-marker-alt fa-lg"></i>  H#18, Gausal Azam Avenue,
+          Quantum Mostafa Tower,
+          Sector-13, Uttara,
+          Dhaka-1230, Bangladesh.
+        </p>
+        <p>
+          <i class="fas fa-envelope-square fa-lg"></i>  info@foodbahokbd.com
+        </p>
+        <p>
+          <i class="fas fa-globe fa-lg"></i> www.foodbahokbd.com
+        </p>
+        <!-- Social buttons -->
+        <ul class="list-unstyled list-inline text-left">
+          <li class="list-inline-item">
+            <a mdbBtn floating="true" color="fb" class="mx-1" mdbWavesEffect>
+              <mdb-icon class="fa-lg" fab icon="facebook"></mdb-icon>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a mdbBtn floating="true" color="tw" class="mx-1" mdbWavesEffect>
+              <mdb-icon class="fa-lg" fab icon="twitter"></mdb-icon>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a mdbBtn floating="true" color="gplus" class="mx-1" mdbWavesEffect>
+              <mdb-icon class="fa-lg" fab fab icon="google-plus"></mdb-icon>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- Grid column -->
+
 
     </div>
-    <!-- Footer Links -->
+    <!-- Grid row -->
 
-    <hr>
+  </div>
+  <!-- Footer Links -->
 
-    <!-- Call to action -->
-    <ul class="list-unstyled list-inline text-center py-2">
-      <li class="list-inline-item">
-        <h5 class="mb-1">DOWNLOAD OUR APP</h5>
-      </li>
-      <li class="list-inline-item">
-        <a href="#!" mdbBtn color="danger" rounded="true" mdbWavesEffect>Sign up!</a>
-      </li>
-    </ul>
-    <!-- Call to action -->
+  <hr>
 
-    <hr>
-
-    <!-- Social buttons -->
-    <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="fb" class="mx-1" mdbWavesEffect>
-          <mdb-icon fab icon="facebook"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="tw" class="mx-1" mdbWavesEffect>
-          <mdb-icon fab icon="twitter"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="gplus" class="mx-1" mdbWavesEffect>
-          <mdb-icon fab fab icon="google-plus"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="li" class="mx-1" mdbWavesEffect>
-          <mdb-icon fab icon="linkedin"></mdb-icon>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a mdbBtn floating="true" color="dribbble" class="mx-1" mdbWavesEffect>
-          <mdb-icon fab icon="dribbble"></mdb-icon>
-        </a>
-      </li>
-    </ul>
-    <!-- Social buttons -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2021 Copyright:
-      <a href="www.foodbahok.com"> foodbahok.com</a>
+  <!-- Call to action -->
+  <ul class="list-unstyled list-inline text-center">
+    <li class="list-inline-item">
+      <h5 class="mb-1">DOWNLOAD OUR APP</h5>
+    </li>
+    <li class="list-inline-item">
+      <a href="#!" mdbBtn color="danger" rounded="true" mdbWavesEffect>Sign up!</a>
+    </li>
+  </ul>
+  <!-- Call to action -->
+  <div class="row">
+    <div class="col-8 offset-2">
+      <img src="assets/img/bahoklogo/ssl.png" alt="img" width="100%">
     </div>
-    <!-- Copyright -->
+  </div>
 
-  </footer>
-  <!-- Footer -->
+  <hr>
+  <!-- Social buttons -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2021 Copyright:
+    <a href="www.foodbahok.com"> foodbahok.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
