--- a/src/app/views/checkout/checkout-details/checkout-details.component.html
+++ b/src/app/views/checkout/checkout-details/checkout-details.component.html
@@ -17,6 +17,9 @@
         <div class="col-lg-4">
             <app-checkout-cart></app-checkout-cart>
         </div>
+        <!-- <div class="col-lg-12">
+            <a  mdbBtn color="red" mdbWavesEffect class="mt-3"  (click)="makePayment()">Proceed to Pay</a>
+        </div> -->
     </div>
 </div>
 </section>
