--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -34,9 +34,9 @@
         </div>
     <!-- Section heading -->
     <div class="clearfix">
-        <span class="h6-responsive font-weight-bold text-center my-5 float-left">All</span>
+        <!-- <span class="h6-responsive font-weight-bold text-center my-5 float-left">All</span>
         <span *ngIf="changeviewFlag == false" class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  (click)="changeview(true)"><i style="color: red;margin-right: 7px;" class="fas fa-map-marker-alt"></i>Map View</span>
-        <span *ngIf="changeviewFlag == true" class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  (click)="changeview(false)"><i style="color: red;margin-right: 7px;" class="fas fa-list-alt"></i>List View</span>
+        <span *ngIf="changeviewFlag == true" class="h6-responsive font-weight-bold text-center my-5 float-right" style="cursor: pointer;"  (click)="changeview(false)"><i style="color: red;margin-right: 7px;" class="fas fa-list-alt"></i>List View</span> -->
     </div>
     <!-- Grid row -->
     <div class="row">
