--- a/src/app/views/outlets-details/common/products/products.component.scss
+++ b/src/app/views/outlets-details/common/products/products.component.scss
@@ -31,3 +31,9 @@
 .borderbottom{
     border-bottom: 1px solid gray;
 }  
+
+.card{
+    .single-news:nth-child(1){
+        margin-top: 10px;
+    }
+}
