--- a/src/app/main-layout/navigation/navigation.component.scss
+++ b/src/app/main-layout/navigation/navigation.component.scss
@@ -56,6 +56,7 @@ div.md-form{
   margin-left: 8px;
   border-radius: 30px;
   height: 40px;
+  display: flex;
 }
 button{
   background-color: red !important;
